add first working prototype